@@ -1,0 +1,110 @@
+/*
+ * dump-list.c --
+ *
+ *      Operations to dump flat lists of SMI module information.
+ *
+ * Copyright (c) 2000 Frank Strauss, Technical University of Braunschweig.
+ * Copyright (c) 2000 J. Schoenwaelder, Technical University of Braunschweig.
+ *
+ * See the file "COPYING" for information on usage and redistribution
+ * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
+ *
+ * @(#) $Id: dump-xml.c,v 1.12 2000/07/04 10:07:10 strauss Exp $
+ */
+
+/*
+ * TODO: - always generate node output in OID order
+ *       - also generate a list of typedef identifiers
+ *	 - add a type column which contains the type
+ *	   for nodes or the parent type for typedefs
+ */
+
+#include <config.h>
+
+#include <stdlib.h>
+#include <stdio.h>
+#include <stdarg.h>
+#include <string.h>
+#include <ctype.h>
+#include <time.h>
+
+#include "smi.h"
+#include "smidump.h"
+
+
+
+static char *getNodekindString(SmiNodekind nodekind)
+{
+    return
+	(nodekind == SMI_NODEKIND_NODE)         ? "node" :
+	(nodekind == SMI_NODEKIND_SCALAR)       ? "scalar" :
+	(nodekind == SMI_NODEKIND_TABLE)        ? "table" :
+	(nodekind == SMI_NODEKIND_ROW)	        ? "row" :
+	(nodekind == SMI_NODEKIND_COLUMN)	? "column" :
+	(nodekind == SMI_NODEKIND_NOTIFICATION) ? "notification" :
+	(nodekind == SMI_NODEKIND_GROUP)        ? "group" :
+	(nodekind == SMI_NODEKIND_COMPLIANCE)   ? "compliance" :
+	(nodekind == SMI_NODEKIND_CAPABILITIES) ? "capabilities" :
+					          "-";
+}
+
+
+
+static char *getOidString(SmiSubid *o, int l)
+{
+    static char s[200];
+    int i;
+    
+    for (i = 0, s[0] = 0; i < l; i++) {
+	sprintf(&s[strlen(s)], "%d.", o[i]);
+    }
+    s[strlen(s)-1] = 0;
+    return s;
+}
+
+
+
+static void printIdentifier(SmiModule *module)
+{
+    SmiNode *node;
+    int i;
+    
+    for (node = smiGetFirstNode(module, SMI_NODEKIND_ANY);
+	 node; node = smiGetNextNode(node, SMI_NODEKIND_ANY)) {
+	printf("%-15s %-20s %-12s %-30s\n",
+	       module->name, node->name,
+	       getNodekindString(node->nodekind),
+	       getOidString(node->oid, node->oidlen));
+    }
+}
+
+
+
+void dumpIdentifier(Module *module)
+{
+    SmiModule *smiModule;
+    Module    *mPtr;
+    SmiNode   *smiNode;
+    int	      unite;
+
+    smiModule = module->smiModule;
+    unite = module->flags & SMIDUMP_FLAG_UNITE;
+
+    if ((smiModule && !unite) || (!smiModule && unite)) {
+	if (! (module->flags & SMIDUMP_FLAG_SILENT)) {
+	    printf("# %s list of identifier (generated by smidump "
+		   SMI_VERSION_STRING ")\n\n",
+		   unite ? "united" : smiModule->name);
+	}
+    }
+
+    if (smiModule && !unite) {
+	printIdentifier(smiModule);
+    }
+
+    if (!smiModule && unite) {
+	for (mPtr = module; mPtr; mPtr = mPtr->nextPtr) {
+	    printIdentifier(mPtr->smiModule);
+	}
+    }
+}
